--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
   <h1>キャラクターを選んでね！</h1>
   <div class="container">
     <div class="character" onclick="selectCharacter('シャオラン')">
-      <img src="shyaoran.png" alt="シャオラン">
+      <img src="shyaoran_web.jpg" alt="シャオラン">
       <div class="name">シャオラン</div>
     </div>
     <div class="character" onclick="selectCharacter('ゆい')">
-      <img src="yuii.png" alt="ゆい">
+      <img src="yuii_web.jpg" alt="ゆい">
       <div class="name">ゆい</div>
     </div>
   </div>
