--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h1>キャラクターを選んでね！</h1>
   <div class="container">
     <div class="character" onclick="selectCharacter('シャオラン')">
-      <img src="shyaoran_web.JPG" alt="シャオラン">
+      <img src="shaoran_web.JPG" alt="シャオラン">
       <div class="name">シャオラン</div>
     </div>
     <div class="character" onclick="selectCharacter('ゆい')">
