--- a/stage.html
+++ b/stage.html
@@ -3,31 +3,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ステージ画面</title>
+  <title>ゲームステージ</title>
   <style>
-    body { margin: 0; background-color: #eef; font-family: sans-serif; text-align: center; padding: 20px; }
-    h1 { margin-bottom: 10px; }
-    img { max-width: 300px; height: auto; border-radius: 10px; }
-    .character-name { font-size: 24px; margin-top: 10px; font-weight: bold; }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      position: relative;
+      background-image: url('https://images.unsplash.com/photo-1554797589-7241bb691973?auto=format&fit=crop&w=1600&q=80'); /* 桜の背景（Unsplashフリー素材） */
+      background-size: cover;
+      background-position: center;
+      font-family: sans-serif;
+    }
+    #character {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      max-height: 40vh;
+    }
+    .petal {
+      position: absolute;
+      width: 40px;
+      height: 40px;
+      background-image: url('https://cdn.pixabay.com/photo/2020/01/17/17/35/cherry-blossom-4772325_960_720.png');
+      background-size: contain;
+      background-repeat: no-repeat;
+      animation: fall linear;
+    }
+
+    @keyframes fall {
+      0% {
+        transform: translateY(-50px) rotate(0deg);
+        opacity: 0;
+      }
+      100% {
+        transform: translateY(100vh) rotate(360deg);
+        opacity: 1;
+      }
+    }
   </style>
 </head>
 <body>
-  <h1>ようこそ！</h1>
-  <div id="character-area">
-    <img id="character-image" src="" alt="キャラ画像">
-    <div class="character-name" id="character-name"></div>
-  </div>
+  <img id="character" src="" alt="キャラ画像">
 
   <script>
     const name = localStorage.getItem("selectedName");
     const image = localStorage.getItem("selectedImage");
+    const character = document.getElementById("character");
 
-    if (name && image) {
-      document.getElementById("character-name").textContent = name;
-      document.getElementById("character-image").src = image;
+    if (image) {
+      character.src = image;
     } else {
-      document.body.innerHTML = "<h2>キャラが選ばれていません。<br><a href='index.html'>戻る</a></h2>";
+      alert("キャラが選ばれていません。戻ります。");
+      window.location.href = "index.html";
     }
+
+    // 花びら生成
+    function createPetal() {
+      const petal = document.createElement("div");
+      petal.className = "petal";
+      petal.style.left = Math.random() * window.innerWidth + "px";
+      petal.style.animationDuration = 3 + Math.random() * 2 + "s";
+      petal.style.opacity = Math.random();
+      document.body.appendChild(petal);
+
+      setTimeout(() => {
+        petal.remove();
+      }, 5000);
+    }
+
+    // 花びらを一定間隔で落とす
+    setInterval(createPetal, 500);
   </script>
 </body>
 </html>
