--- a/stage.html
+++ b/stage.html
@@ -39,7 +39,7 @@
       position: absolute;
       width: 30px;
       height: 30px;
-      background-image: url('https://cdn.pixabay.com/photo/2020/04/15/08/25/sakura-5044560_1280.png');
+      background-image: url('petal.png');
       background-size: contain;
       background-repeat: no-repeat;
       pointer-events: none;
