--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
   <h1>キャラクターを選んでね！</h1>
   <div class="container">
-    <div class="character" onclick="selectCharacter('シャオラン', 'shaoran_web.JPG')">
-      <img src="shaoran_web.JPG" alt="シャオラン">
+    <div class="character" onclick="selectCharacter('シャオラン', 'shaoran_web.PNG')">
+      <img src="shaoran_web.PNG" alt="シャオラン">
       <div class="name">シャオラン</div>
     </div>
-    <div class="character" onclick="selectCharacter('ゆい', 'yuii_web.JPG')">
-      <img src="yuii_web.JPG" alt="ゆい">
+    <div class="character" onclick="selectCharacter('ゆい', 'yuii_web.PNG')">
+      <img src="yuii_web.PNG" alt="ゆい">
       <div class="name">ゆい</div>
     </div>
   </div>
