--- a/stage.html
+++ b/stage.html
@@ -60,6 +60,23 @@
 </head>
 <body>
   <img id="character" src="" alt="キャラ画像">
+  <!-- スコア表示 -->
+  <div id="score">スコア: 0</div>
+
+  <style>
+    #score {
+      position: fixed;
+      top: 10px;
+      right: 20px;
+      font-size: 20px;
+      font-weight: bold;
+      color: #fff;
+      background: rgba(0,0,0,0.4);
+      padding: 6px 12px;
+      border-radius: 8px;
+      z-index: 10;
+    }
+  </style>
 
   <script>
     // キャラ読み込み
