--- a/stage.html
+++ b/stage.html
@@ -19,10 +19,10 @@
     #character {
       position: absolute;
       bottom: 20px;
+      left: 50%;
       transform: translateX(-50%);
       max-height: 40vh;
       z-index: 5;
-      transition: bottom 0.3s ease;
     }
     #character.jump {
       animation: jump 0.6s ease;
@@ -54,33 +54,30 @@
         opacity: 1;
       }
     }
-    #score, #timer {
+    #scoreboard {
       position: fixed;
       top: 10px;
-      font-size: 20px;
+      right: 20px;
+      font-size: 18px;
       font-weight: bold;
       color: #fff;
-      background: rgba(0,0,0,0.4);
-      padding: 6px 12px;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 8px 16px;
       border-radius: 8px;
       z-index: 10;
+      line-height: 1.4;
     }
-    #score {
-      right: 20px;
-    }
-    #timer {
-      left: 20px;
-    }
-    #gameOver {
-      position: fixed;
-      top: 50%;
+    #gameover {
+      position: absolute;
+      top: 40%;
       left: 50%;
       transform: translate(-50%, -50%);
+      font-size: 36px;
+      font-weight: bold;
       background: rgba(0,0,0,0.7);
-      color: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      font-size: 24px;
+      color: white;
+      padding: 20px 40px;
+      border-radius: 12px;
       display: none;
       z-index: 20;
     }
@@ -88,26 +85,35 @@
 </head>
 <body>
   <img id="character" src="" alt="キャラ画像">
-  <div id="score">スコア: 0</div>
-  <div id="timer">残り: 30秒</div>
-  <div id="gameOver">ゲーム終了！<br>スコア: <span id="finalScore"></span></div>
+  <div id="scoreboard">
+    スコア: <span id="score">0</span><br>
+    ハイスコア: <span id="highscore">0</span><br>
+    残り: <span id="timer">30</span>秒
+  </div>
+  <div id="gameover">ゲーム終了！</div>
 
   <script>
-    const se = new Audio("kirarin.mp3");
-    const image = localStorage.getItem("selectedImage");
     const character = document.getElementById("character");
+    const scoreDisplay = document.getElementById("score");
+    const highscoreDisplay = document.getElementById("highscore");
+    const timerDisplay = document.getElementById("timer");
+    const gameover = document.getElementById("gameover");
+    const se = new Audio("kirarin.mp3");
+
+    let score = 0;
+    let highscore = localStorage.getItem("highscore") || 0;
+    let timeLeft = 30;
+    let gameInterval;
+
+    highscoreDisplay.innerText = highscore;
+
+    const image = localStorage.getItem("selectedImage");
     if (image) {
       character.src = image;
     } else {
       alert("キャラが選ばれていません。戻ります。");
       window.location.href = "index.html";
     }
-
-    let characterX = window.innerWidth / 2;
-    function updateCharacterPosition() {
-      character.style.left = `${characterX}px`;
-    }
-    updateCharacterPosition();
 
     character.addEventListener("click", () => {
       if (!character.classList.contains("jump")) {
@@ -116,72 +122,66 @@
       }
     });
 
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "ArrowLeft") {
-        characterX -= 20;
-      } else if (e.key === "ArrowRight") {
-        characterX += 20;
-      }
-      characterX = Math.max(0, Math.min(window.innerWidth, characterX));
-      updateCharacterPosition();
-    });
-
-    let score = 0;
-    const scoreDisplay = document.getElementById("score");
     function updateScore() {
-  　　　　　　score++;
-  　　　　　　scoreDisplay.innerText = `スコア: ${score}`;
-  　　　　　　se.currentTime = 0;
-  　　　　　　se.play();
-　　　　　　　　　　}
-
+      score++;
+      scoreDisplay.innerText = score;
+      se.currentTime = 0;
+      se.play();
+    }
 
     function createPetal() {
-      if (isGameOver) return;
       const petal = document.createElement("div");
       petal.className = "petal";
       petal.style.left = Math.random() * window.innerWidth + "px";
       petal.style.animationDuration = (3 + Math.random() * 2) + "s";
       document.body.appendChild(petal);
 
-      const interval = setInterval(() => {
-        const petalRect = petal.getBoundingClientRect();
-        const charRect = character.getBoundingClientRect();
-        const isHit =
-          petalRect.bottom > charRect.top &&
-          petalRect.top < charRect.bottom &&
-          petalRect.left < charRect.right &&
-          petalRect.right > charRect.left;
-
-        if (isHit) {
+      const checkCollision = setInterval(() => {
+        const rect1 = petal.getBoundingClientRect();
+        const rect2 = character.getBoundingClientRect();
+        if (
+          rect1.top < rect2.bottom &&
+          rect1.bottom > rect2.top &&
+          rect1.left < rect2.right &&
+          rect1.right > rect2.left
+        ) {
           updateScore();
           petal.remove();
-          clearInterval(interval);
+          clearInterval(checkCollision);
         }
       }, 100);
 
       setTimeout(() => {
         petal.remove();
-        clearInterval(interval);
+        clearInterval(checkCollision);
       }, 6000);
     }
 
-    let isGameOver = false;
-    const timerDisplay = document.getElementById("timer");
-    let timeLeft = 30;
-    const timer = setInterval(() => {
-      timeLeft--;
-      timerDisplay.innerText = `残り: ${timeLeft}秒`;
+    function startGame() {
+      gameInterval = setInterval(() => {
+        createPetal();
+      }, 400);
 
-      if (timeLeft <= 0) {
-        clearInterval(timer);
-        isGameOver = true;
-        document.getElementById("gameOver").style.display = "block";
-        document.getElementById("finalScore").innerText = score;
+      const countdown = setInterval(() => {
+        timeLeft--;
+        timerDisplay.innerText = timeLeft;
+        if (timeLeft <= 0) {
+          clearInterval(countdown);
+          clearInterval(gameInterval);
+          endGame();
+        }
+      }, 1000);
+    }
+
+    function endGame() {
+      gameover.style.display = "block";
+      if (score > highscore) {
+        localStorage.setItem("highscore", score);
+        highscoreDisplay.innerText = score;
       }
-    }, 1000);
+    }
 
-    setInterval(createPetal, 400);
+    startGame();
   </script>
 </body>
 </html>
