--- a/stage.html
+++ b/stage.html
@@ -894,3 +894,6 @@
     document.body.addEventListener("click", () => {
       if (bgm.play) bgm.play().catch(() => {});
     }, { once: true });
+     </script>
+　　　　　</body>
+</html>
